# code

./: 1.py  README.md  a.py  linux_51.md  numpy使用.ipynb  parse.py  randint.py  read.c  use_nas.md  use_nas.md.orig.2022-11-10_153041  use_nas.md.orig.2022-11-24_220916  use_nas.md.orig.2022-11-24_222315  use_nas.md.toc.2022-11-10_153041  use_nas.md.toc.2022-11-24_220916  use_nas.md.toc.2022-11-24_222315  未命名.ipynb  激活函数.ipynb  逻辑门.ipynb
.ipynb_checkpoints/: activation_function-checkpoint.ipynb  c-checkpoint.py  persion-checkpoint.py  未命名-checkpoint.ipynb
Fortran/: Makefile  code_name  code_name.f90  constants.mod  fortran_continue  fortran_continue.f90  fortran_do.f90  fortran_exit_cycle  fortran_exit_cycle.f90  fortran_goto  fortran_if  fortran_if.f90  fortran_subroutine  fortran_subroutine.f90  fortran_subroutine1  fortran_subroutine2  fortran_subroutine3  fortran_subroutine3.f90  fortran_subroutine4  fortran_subroutine5  fortran_subroutine5.f90  fortran_while  global1.mod  global2.mod  loop  loop.cpp  main.f90  matrix  matrix.f90  meshfem2D  subroutine1  subroutine1.f90  sum  sum.cpp  tasks.json  tempCodeRunnerFile.f90  test1  test1.f90
PyQt6_learn/: .gpr  01.py  02.py  03.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  GUI.py  (+13 more)
c++/Eigen/: CMakeCache.txt  CMakeLists.txt  Makefile  Matrices_Vectors  Matrices_Vectors.cpp  cmake_install.cmake  comma-initializer  comma-initializer.cpp  fft  fft.cpp  fftw  fftw.cpp  hello_Eigen
c++/Eigen/EigenChineseDocument/Eigen/: CMakeCache.txt  Makefile  cmake_install.cmake
(+368 files in other folders)
